--- a/style.css
+++ b/style.css
@@ -16,3 +16,14 @@ body {
 .underline-pink {
     text-decoration: underline #FE85CD;
 }
+
+.btn-pink {
+    background-color: #ff69b4 !important;
+    border-color: #ff69b4 !important;
+    color: white !important;
+}
+
+.btn-pink:hover {
+    background-color: #ff1493 !important;
+    border-color: #ff1493 !important;
+}
