--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ body {
 .title {
     font-size: 2rem; /* Tamanho do título maior */
     font-weight: bold; /* Negrito */
-    color: #ff1493;
+    color: #ff69b4;
 }
 
 .description {
