--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body {
 .title {
     font-size: 2rem; /* Tamanho do título maior */
     font-weight: bold; /* Negrito */
-    color: #ff69b4;
+    color: #9d236b;
 }
 
 .description {
